# Rust-RestAPIs

./: .gitignore  Cargo.toml
src/: main.rs
src/api/: handler.rs  mod.rs  routes.rs
src/config/: mod.rs
src/db/: connection.rs
src/models/: todo.rs
src/utils/: error.rs
