[package]
name = "Practice-api"
version = "0.1.0"
edition = "2021"

[dependencies]
    axum = "0.8.6"
dotenvy = "0.15"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = "1.18.1"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5.2"
bcrypt = "0.17.1"
tokio = { version = "1.48.0", features = ["full"] }
mongodb = "3.3.0"
jsonwebtoken = "10.2.0"
